# satel_integra

./: CHANGELOG.md  HISTORY.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
.github/workflows/: dev.yml  release.yml
satel_integra/: cli.py  encryption.py  satel_integra.py
satel_integra2/: __init__.py
tests/: test_encryption.py
