[tool]
[tool.poetry]
name = "satel_integra2"
version = "0.3.7"
homepage = "https://github.com/wasilukm/satel_integra2"
description = '''
Communication library and basic testing tool for Satel Integra alarm system.
Communication via tcpip protocol published by SATEL.
'''

authors = []
readme = "README.rst"
license =  "MIT"
classifiers=[
    'Development Status :: 2 - Pre-Alpha',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: MIT License',
    'Natural Language :: English',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
]
packages = [
    { include = "satel_integra2" },
    { include = "tests", format = "sdist" },
]

[tool.poetry.dependencies]
python = ">=3.7,<4.0"
cryptography = "^38.0.3"
click = {version = "^8.1.3", python = ">=3.8,<4.0"}

[tool.poetry.extras]
test = [
    "pytest",
    "flake8",
    "flake8-docstrings",
    "pytest-cov"
    ]

dev = ["tox", "virtualenv", "pip", "twine", "toml", "bump2version"]

doc = []

[build-system]
requires = ["poetry-core>=1.0.0", "setuptools"]
build-backend = "poetry.core.masonry.api"
